Changed padding-top and margin-top and increased by 2vh to stop text being too close to the nav on mobile view

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -43,7 +43,7 @@ header {
 }
 
 .header-content {
-  padding-top: 15vh;
+  margin-top: 17vh;
   text-transform: uppercase;
   text-align: center;
   padding-left: 5%;
